2003-10-14  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/readmidi.c:
	  Fix around channel layer

2003-10-12  Kentaro Sato <kentaro@ranvis.com>

	* timidity/rcp.c: RCP tempo gradation is supported.

2003-10-11  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Fix temperament control to fit with channel layer

2003-10-10  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/readmidi.c:
	  Fix around channel layer (GS - maybe completed)

2003-10-08  Takashi Iwai <tiwai@suse.de>

	* timidity/timidity.c: Fixed segfault or error with use of
	  #extension opt.  optind is reset before calling getopt_long()
	  again.

2003-10-08  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* */Makefile.in, aclocal.m4, configure, configure.in,
	  utils/getopt.c, utils/tmdy_getopt.h:
	  Revert fix getopt_long problem in MinGW environment

2003-10-08  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.c: Fixed crash with --realtime-load
	  when an instrument of the alternative bank is not defined.
	* timidity/readmidi.c: Returning an error from WRDTracer.start()
	  now disables ME_SHERRY in addition to ME_WRD.
	  Fixed ME_GSLCD to be handled correctly in trace mode.

2003-10-08  mput <root@mput.dip.jp>

	* timidity/timidity.c (set_tim_opt_long): Bug fix

2003-10-07  Takashi Iwai <tiwai@suse.de>

	* timidity/timidity.c: Clean up option handling.

2003-10-07  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/readmidi.[ch]:
	  Fix around channel layer (to be continued)
	* timidity/newton_table.c: move to configs/msc-project.zip

2003-10-07  Saito <saito2@digitalme.com>

	* timidity/newton_table.c:
	  Add this file for VC.
	* utils/tmdy_getopt.h:
	  Fix for VC.

2003-10-07  skeishi <s_keishi@mutt.freemail.ne.jp>

	* utils/getopt.c, utils/tmdy_getopt.h:
	  Fix getopt_long's problem in MINGW environment.
	* interface/rtsyn_winmm.c:
	  Fix CPU usage rate of TWSYNTH.

2003-10-04  TAMUKI Shoichi <tamuki@linet.gr.jp>
