@@ -1,3 +1,8 @@
+2003-10-23  mput <root@mput.dip.jp>
+
+	* timidity/controls.h: Fix signedness for ctl->flags
+	* timidity/timidity.c (main): Fix for getopt_long
+
 2003-10-14  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* timidity/readmidi.c:
